# SynthVibe

./: .gitignore  CLAUDE.md  CMakeLists.txt  THIRDPARTY.md  build-with-vs.bat  build.bat  build_ninja.sh  deploy.bat  deploy.ps1
.claude/: settings.json
.claude/commands/: deploy-vst.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: ApiKeyStore.cpp  ApiKeyStore.h  ClaudeClient.cpp  ClaudeClient.h  JuceHttpTransport.cpp  JuceHttpTransport.h  ParamIdIndex.cpp  ParamIdIndex.h  PatchApplier.cpp  PatchApplier.h  SystemPrompt.cpp  SystemPrompt.h  Transport.h  Variation.h
Source/API/: APIServer.h
Source/Engine/: ArpEngine.cpp  ArpEngine.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  FilterCoefficients.h  ModBus.h  ModEngine.cpp  ModEngine.h  Oscillator.cpp  Oscillator.h  SynthEngine.cpp  SynthEngine.h  UnisonOscillator.cpp  UnisonOscillator.h  Voice.cpp  Voice.h  WavetableBank.cpp  WavetableBank.h  WavetableData.cpp
Source/FX/: Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Drive.cpp  Drive.h  Eq3.cpp  Eq3.h  FXChain.cpp  FXChain.h  FxParams.h  FxRunner.cpp  FxRunner.h  FxSlot.cpp  FxSlot.h  FxTypeMap.cpp  FxTypeMap.h  Reverb.cpp  Reverb.h
Source/Parameters/: ModDestinations.cpp  ModDestinations.h  ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/UI/: AiPromptModal.cpp  AiPromptModal.h  ArpTab.h  BottomBar.h  Breakpoint.h  DesignTokens.h  Fonts.h  FxTab.h  KnobWithLabel.h  LookAndFeel.h  ModTab.h  SoundTab.h  SynthSection.h  TopBar.h
Source/UI/components/: AiErrorBanner.h  AiSettingsView.h  ArcKnob.h  ArpOnOffPill.h  BipolarAmountBar.h  BrandBadge.h  CurveSelect.h  EnvelopeEditor.h  FilterResponseView.h  FilterTypeSelect.h  FxChainStrip.h  FxSlotCard.h  FxSlotTypePicker.h  KnobTooltip.h  MainTab.h  MasterVolKnob.h  ModDestPicker.h  ModMatrixTable.h  ModRow.h  ModSourcePicker.h  NavArrowButton.h  OscilloscopeView.h  PanelHeader.h  PlotFrame.h  PresetNameField.h  PromptButton.h  SegmentedButtonRow.h  SynthKeyboard.h  TableSelect.h  VariationCard.h  WaveTypeSelect.h
Tests/: AiPromptModalTests.cpp  AiSettingsViewTests.cpp  ApiKeyStoreTests.cpp  ArpEngineTests.cpp  ClaudeClientLiveTests.cpp  ClaudeClientTests.cpp  DesignTokensTests.cpp  DummyProcessor.h  Eq3Tests.cpp  ExponentialEnvelopeTests.cpp  FakeTransport.h  FilterCoefficientsTests.cpp  FxRunnerTests.cpp  ModEngineTests.cpp  OscillatorTests.cpp  ParamIdIndexDriftTests.cpp  ParameterIdMigrationTests.cpp  PatchApplierTests.cpp  SynthEngineTests.cpp  SystemPromptTests.cpp  UIConstructionTests.cpp  VoiceTests.cpp  WavetableBankTests.cpp  main.cpp
docs/ClaudeDesign/: AISynth V1 Hi-Fi.html  AISynth Wireframes.html
docs/ClaudeDesign/Source/UI/: DesignTokens.h
docs/ClaudeDesign/docs/: README.md  ai-contract.md  components.md  param-audit.md  preset-format.md  responsive.md
docs/superpowers/plans/: 2026-04-18-synthvibe-bugfixes.md  2026-04-18-synthvibe-phase1.md  2026-04-18-ui-redesign.md  2026-04-19-filter-drive.md  2026-04-19-reverb-fx.md  2026-04-19-unison-engine.md  2026-04-20-bug-fixes-c1-c2-i1.md  2026-04-20-code-review-report.md  2026-04-20-stereo-unison-spread.md  2026-04-21-design-roadmap.md  2026-04-21-filter-coefficient-recompute.md  2026-04-21-parameter-smoothing.md  2026-04-21-phase1-foundation.md  2026-04-22-phase2-sound-tab.md  2026-04-22-phase2b-sound-tab-params.md  2026-04-24-handover.md  2026-04-24-phase3-modmatrix.md  2026-04-25-modengine.md  2026-04-25-phase4-fx-slots.md  2026-04-26-ai-layer-a1.md  2026-04-26-ai-layer-a2.md  2026-04-26-phase5-arp-polish.md  2026-04-26-tech-debt-sweep.md  2026-04-28-phase-b-wavetable.md
docs/superpowers/specs/: 2026-04-18-synthvibe-phase1-design.md  2026-04-18-ui-redesign-design.md  2026-04-19-filter-drive-design.md  2026-04-19-reverb-fx-design.md  2026-04-19-unison-engine-design.md  2026-04-20-stereo-unison-spread-design.md  2026-04-21-filter-coefficient-recompute-design.md  2026-04-21-parameter-smoothing-design.md  2026-04-22-phase2-sound-tab-design.md  2026-04-22-phase2b-sound-tab-params-design.md  2026-04-26-ai-layer-a1-design.md  2026-04-26-ai-layer-a2-design.md  2026-04-26-arp-polish-design.md  2026-04-26-tech-debt-sweep-design.md  2026-04-28-phase-b-wavetable-design.md
tools/wavetable/: generate.py
